fixed some css issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,33 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  width: 100vw;
+}
+
 .App {
   text-align: center;
   width: 100%;
   background-color: #FEDCD2
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+
 .App-header {
   background-color: #BFD8D2;
-  height: 100px;
+  height: 150px;
   padding: 20px;
   color: #DF744A;
-  width: 100%;
+  max-width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 1em;
 }
 
 .App-intro {
@@ -28,13 +43,14 @@
   display: table;
   margin: 0 auto;
   width: 100%;
+  max-width: 100vw;
   
   table {
     border: 1px solid black;
     border-radius: 5px;
     border-spacing: 0px;
     width: 100%;
-    font-size: .7em;
+    font-size: .2em;
   }
 
   th {
@@ -43,7 +59,6 @@
   }
 
   th, td {
-    padding: 10px;
     border: 1px solid black;
   }
 
@@ -72,6 +87,10 @@
   .camper-list {
     table {
       font-size: 0.9em;
+    }
+
+    th, td {
+      padding: 10px;
     }
 
     img {
